force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Indicates the channel where this Campaign focuses.</description>
    <inlineHelpText>Indicates the channel where this Campaign focuses.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>