force-app/main/default/objects/Campaign/fields/ContactSite__c.field-meta.xml
<CustomField>
    <fullName>ContactSite__c</fullName>
    <description>The Contact Site for the Campaign, unique to the Campaign.</description>
    <inlineHelpText>The Contact Site for the Campaign, unique to the Campaign.</inlineHelpText>
    <label>Contact Site</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>