force-app/main/default/objects/Campaign/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program to which this Campaign relates.</description>
    <inlineHelpText>The Program to which this Campaign relates.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>ProgramCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>